# open-attestation-rust-cli

./: Cargo.toml
src/: main.rs  wrap.rs
