[package]
name = "open-attestation-rust-cli"
version = "0.1.0"
authors = ["Nebulis <nebounet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
sha3 = "0.8.2"
serde_json = "1.0"

